# lightdm-module-greeter

./: CHANGELOG.md  Makefile.am  README.md  configure.ac
data/: lightdm-module-greeter.conf  lightdm-module-greeter.desktop
data/scripts/: example.sh
example/: battery.sh  lightdm-module-greeter.conf
src/: app.c  callbacks.c  config.c  config.h  main.c  module.c  module.h  ui.c  ui.h
